# orso

./: .gitignore  .gitmodules  README.md  build.odl  build.or  build_and_run_tests  c_script.c  check_leaks  compile  generate_wasm  hello_world.or  intrinsics.h  main.c  make_test  meson.build  meson_options.txt  nob.c  nob.h  orso.js  orso.sublime-workspace  orso.wasm  playground.html  probe.odl  probe.or  raylibtest.or  run_tests  script.odl  script.orso  tmp.odl  tmp2.odl  todo.txt
.github/workflows/: build-playground.yml
benchmarks/: benchmark  fib  fib.c  fib.lua  fib.orso  fib.py  fib.um  loop  loop.orso  loops.c
examples/: arena.or  bubble_sort.or  control_flow.odl  debugger.txt  demo.odl  dodge_game.or  gol.or  gol_build.or  guessing_game.orso  hello_world.odl  insert_unroll_for.or  math.odl  matrix.odl  probe.odl  structs.odl  transpile.txt  values.odl
examples/asteroids/: build.or  game.or
examples/bugs/: bug_1.odl  bug_2.odl  bug_3.odl
examples/expressions/: block1.odl  destruct.odl  if1.odl  if2.odl  while1.odl
examples/gol/: build.or  gol.or
include/: abstract_syntax_tree.h  arena.h  array.h  byte_code.h  chunk.h  codegen.h  codegen2.h  codegenc.h  common.h  debug.h  debugger.h  def.h  error.h  error.x  error_codes.h  garbage_collector.h  instructions.h  interpreter.h  khash.h  lexer.h  list.h  log.h  mathutils.h  memarr.h  object.h  opcodes.h  parser.h  savine.h  savine_string.h  slot.h  static_analyzer.h  str_to_value.h  stringt.h  stringtable.h  symbol_table.h  table.h  tmp.h  tmpfile.h  type.h  type_set.h  (+4 more)
lib/: arena.or  cc.h  compiler.odl  compiler.or  core.c  core.h  core.odl  core.or  dynarr.or  dynlib.h  dynlib.or  intrinsic_fns.x  intrinsics.h  intrinsics.in  io.or  math.or  memory.or  orso.c  orso.h  orso.or  string_builder.or
playground/: mode-orso.js  playground.css  playground.html
src/: abstract_syntax_tree.c  arena.h  array.c  byte_code.c  chunk.c  codegen.c  compiler.odl  debug.c  debugger.c  error.c  garbage_collector.c  interpreter.c  lexer.c  list.c  main.c  main2.c  notes.txt  object.c  parser.c  savine.c  savine_string.c  sb.h  slot.c  static_analyzer.c  str_to_value.c  stringt.h  stringtable.c  symbol_table.c  test.c  type.c  type_set.c  value.c  virtual_machine.c  wasm.c
test/: arithmetic.c  array.c  assignment.c  bugs.odl  comments.orso  compile_time_evaluation.orso  constant_evaluation.orso  control_flow.c  declarations.odl  declarations_assignments.c  error.c  folding_evaluation.odl  folding_evaluation.orso  function_tests.orso  functions.orso  list.c  logical_operators.c  loops.c  minunit.h  struct.odl  struct.orso  test.c  test.h  test_file_runner.c  tmp.c  tmp.orso  variable_declaration.c  variable_declaration_.c  variable_retrieval.c
tests/: hello.odl  probe.c  probe.edl  test.c
tests/bugs/: block1.c  break1.c  break1.edl  dereference.c  dereference.edl  do1.c  do1.edl  do2.c  float_arithmetic.c  float_arithmetic.edl  folding1.c  folding1.edl  if1.c  if1.edl  no_error_arrow.edl  while1.c  while1.edl  while2.c
tests/correctness/: hello_world.or  issue_7.or
tests/errors/: if_decls.weird_mes  missing_close_parenthesis_for_group.odl  missing_close_square_for_type.odl  missing_closing_parenthesis_after_directive.odl  missing_condition_on_branch.odl  missing_condition_on_while.odl  missing_do_label.odl  missing_expression.odl  missing_for_cond.odl  missing_open_brace_for_builtin_call.odl  new_errors__.odl  no_semicolon_after_increment_for.odl  only_keywords_or_brace_after_condition_if.odl  sem.all-args-required.nonconst-call.or  sem.arg-count-mismatch.directive-call.or  sem.arg-count-mismatch.fiicall-call.or  sem.arg-count-mismatch.insert.or  sem.arg-count-mismatch.len.or  sem.arg-count-mismatch.offsetptr.or  sem.arg-count-mismatch.param-struct.or  sem.arg-count-mismatch.ptrdiff.or  sem.arg-mismatch.subscript-func-arg-count.or  sem.arg-overflow.call-args.or  sem.arg-overflow.sizeof.or  sem.arg-overflow.typeof.or  sem.args-required.nonconst-call.or  sem.cannot-be-float.arr-size.or  sem.circ-dep.constant.or  sem.expected-bool.branch-condition.or  sem.expected-bool.not-op.or  sem.expected-const.arr-type.or  sem.expected-const.enum-decl.or  sem.expected-const.struct-fields.or  sem.expected-constant.arr-size.or  sem.expected-constant.cast-type.or  sem.expected-constant.decl-init.or  sem.expected-constant.directive.or  sem.expected-constant.dot-access-type.or  sem.expected-constant.func-return-type.or  sem.expected-constant.func-sig-param.or  (+153 more)
tests/expr/: arithmetic.c  arithmetic.edl  assignment.c  assignments.c  assignments.edl  block.c  block.edl  block_bug1.c  block_bug1.edl  blocks.c  blocks.edl  boolean.c  booleanops.c  booleanops.edl  call.c  call.edl  do.c  do.edl  do_blocks.c  do_blocks.edl  do_blocks.edl-  do_blocks_bug1.c  do_blocks_bug1.edl  do_blocks_bug2.c  func_fib_loop.c  func_fib_loop.edl  func_fib_recursive.c  func_fib_recursive.edl  functions.edl  generics.edl  if.c  ifs.c  ifs.edl  ifs.odl  ifs2.edl  implicit_casting.c  implicit_casting.edl  numbers.c  numbers.edl  overunderflow.c  (+17 more)
tests/features/: aggregate_assignment_arith.odl  aggregate_assignment_arith.odl.result.native  aggregate_compare.odl  arithmetic.odl  arithmetic.odl.result.native  array_arithmetic.odl  array_arithmetic.odl.result.native  assignment.odl  assignment.odl.result.interp  basic_array_programming.odl  binary_operators.odl  binary_operators.odl.result.interp  binary_operators.odl.result.native  blocks.odl  blocks.odl.result.interp  blocks.odl.result.native  boolean.odl  call.odl  circular_dependency_struct_pointers.odl  compile_time_param_basic.odl  do.odl  do.odl.result.native  generics.odl  generics.odl.result.native  implicit_casting.odl  inferred_func_call_with_labelled_args.odl  inferred_functions_using_signaure_with_args.odl  inferred_functions_using_signaure_with_return.odl  lvalues.odl  lvalues.odl.result.interp  lvalues.odl.result.native  main.odl  nested_array_arithmetic_more.odl  non_constant_struct_list_init.odl  numbers.odl  operations.odl  overunderflow.odl  overunderflow.odl.result.native  parameterized_pair_struct.odl  (+11 more)
(+121 files in other folders)
